--- a/store-admin/src/main/resources/templates/main.html
+++ b/store-admin/src/main/resources/templates/main.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <h1>Main Page</h1>
+<h1 th:text="${#authentication}"></h1>
+<span sec:authentication="name"></span>
 </body>
 </html>
